--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: spectrumTest
+Package: WasserSpectrum
 Title: Wasserstein-Based Inference on Distributional Diversity Patterns
 Version: 0.1.0
 Description: 
