--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,13 @@ export(plot_manova)
 export(quantile_FLT)
 export(shape_contrast_test)
 export(spectrum_manova)
+export(wasserstein_quantile_cluster)
 export(wasserstein_spectrum)
 export(wasserstein_spectrum_multiclass)
 export(wasserstein_test)
+importFrom(Rcpp,sourceCpp)
+importFrom(cluster,pam)
+importFrom(fpc,pamk)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
@@ -19,15 +23,19 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme_minimal)
 importFrom(patchwork,plot_layout)
+importFrom(pbapply,pblapply)
 importFrom(sandwich,vcovHC)
 importFrom(splines,bs)
 importFrom(stats,coef)
 importFrom(stats,lm)
 importFrom(stats,model.matrix)
+importFrom(stats,p.adjust)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
 importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,relevel)
+importFrom(stats,residuals)
 importFrom(transport,wasserstein1d)
+useDynLib(WasserSpectrum, .registration = TRUE)
