--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ export(plot_manova)
 export(quantile_FLT)
 export(shape_contrast_test)
 export(spectrum_manova)
-export(wasserstein_quantile_cluster)
+export(wasserstein_quantile_single)
+export(wasserstein_quantile_test)
 export(wasserstein_spectrum)
 export(wasserstein_spectrum_multiclass)
 export(wasserstein_test)
@@ -22,6 +23,7 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,theme_minimal)
 importFrom(patchwork,plot_layout)
 importFrom(pbapply,pblapply)
+importFrom(pracma,trapz)
 importFrom(sandwich,vcovHC)
 importFrom(splines,bs)
 importFrom(stats,coef)
